Contact body overflow fix
-

--- a/contact/stylesheet.css
+++ b/contact/stylesheet.css
@@ -474,7 +474,7 @@ label {
 		width: 125vw;
 	}
 	body {
-		overflow: hidden;
+		overflow-x: hidden;
 		background-color: black;
 	}
 
